--- a/.github/workflows/Just For Test.yml
+++ b/.github/workflows/Just For Test.yml
@@ -86,9 +86,9 @@ jobs:
       # 自定插件
       - name: Download My Package
         run: |
-          chmod +x $DIY0_FILE
+          chmod +x diy/x86/diy-part1of.sh
           cd openwrt
-          ../$DIY0_FILE          
+          ./diy/x86/diy-part1of.sh     
   
       # 更新Feed
       - name: Update Feeds
@@ -100,11 +100,11 @@ jobs:
       # 配置文件
       - name: Config File
         run: |
-          chmod +x $DIY1_FILE
+          chmod +x diy/x86/diy-part2of.sh
           [ -e files ] && cp -r -f files openwrt/files
           [ -e config.d/$CONF_FILE ] && cp -r -f config.d/$CONF_FILE openwrt/.config
           cd openwrt
-          ../$DIY1_FILE
+          ./diy/x86/diy-part2of.sh
 
       # SSH连接
       - name: SSH Connection
