--- a/.github/workflows/ARM_Plus_OpenWrt_Lienol.yml
+++ b/.github/workflows/ARM_Plus_OpenWrt_Lienol.yml
@@ -9,7 +9,7 @@ name: ARMv8_Plus_Lienol_21.02
 
 on:
   repository_dispatch:
-    types: [Lienol Source Code Update] 
+    types: [Lienol Source Code Update, Mykernel Update] 
   workflow_dispatch:
     inputs:
       ssh:
