add wait for kernel bulid

--- a/.github/workflows/ARM_Plus_OpenWrt_Lienol.yml
+++ b/.github/workflows/ARM_Plus_OpenWrt_Lienol.yml
@@ -361,7 +361,7 @@ jobs:
         find dl -size -1024c -exec rm -f {} \;
 
     - name: Compile the firmware
-      if: (github.event.inputs.myself == 'true' && github.event.inputs.myself  != 'false') 
+#      if: (github.event.inputs.myself == 'true' && github.event.inputs.myself  != 'false') 
       id: compile
       run: |
         cd openwrt
