--- a/.github/workflows/ARM_Plus-OpenWrt_Lean.yml
+++ b/.github/workflows/ARM_Plus-OpenWrt_Lean.yml
@@ -23,21 +23,32 @@ on:
   push:
     paths:
       - 'diy-part2.sh'
+
+env:
+  REPO_URL: https://github.com/coolsnowwolf/lede
+  REPO_BRANCH: master
+  TZ: Asia/Shanghai
+  UPLOAD_BIN_DIR: false
+  UPLOAD_FIRMWARE: true
+  UPLOAD_RELEASE: true  
+  UPLOAD_189: false
+  WHOAMI: Tao
+  GZIP_IMGS: .7z
+  KERNEL_AUTO_LATEST: true
+  OPENWRT_ARMVIRT: lean/*/*/*rootfs.tar.gz
+  KERNEL_VERSION_NAME: 5.4.163_5.10.83_5.15.13_5.17.13
+  PACKAGE_SOC: vplus_beikeyun_l1pro_s905d_s905x2_s905x3_s912_s922x_s922x-n2
+  KERNEL_REPO_URL_ONE: https://github.com/ophub/kernel/tree/main/pub/stable
+  KERNEL_REPO_URL_TWO: https://github.com/Tao173/Auto-Update-Router/tree/master/backup/mykernel
+
 jobs:
   buildone: 
     runs-on: ubuntu-20.04
     env:
-      REPO_URL: https://github.com/coolsnowwolf/lede
-      REPO_BRANCH: master
       FEEDS_CONF: diy/arm/feeds.conf.default
       CONFIG_FILE: diy/arm/.config
       DIY_P1_SH: diy/arm/diy-part1.sh
       DIY_P2_SH: diy/arm/diy-part2.sh
-      UPLOAD_BIN_DIR: false
-      UPLOAD_FIRMWARE: false
-      UPLOAD_RELEASE: true
-      UPLOAD_189: false
-      TZ: Asia/Shanghai
       FILE_NAME: ROOTFS_Plus
       PRODUCT_NAME: ARMv8_Plus
 
@@ -189,7 +200,7 @@ jobs:
         tag: ${{ env.FILE_NAME }}
         token: ${{ secrets.GITHUB_TOKEN }}
         body: |
-          ** 打包时间:🕛 ${{ env.DATE }}      🤵 源码作者:[Lean](https://github.com/coolsnowwolf)
+          打包时间:🕛 ${{ env.DATE }}      🤵 源码作者:[Lean](https://github.com/coolsnowwolf)
           * 这是 ARMv8_Lean plus打包临时固件，不可直刷
           直刷固件参见 Tag 名为 ${{ env.PRODUCT_NAME }} 的 Releases
           当前使用版本:【编译前的最后一次[➦主源码](https://github.com/coolsnowwolf/lede)更新记录】
@@ -208,22 +219,22 @@ jobs:
       uses: Tao173/Auto-Update-Router@master
       if: steps.organize.outputs.status == 'success' && !cancelled()
       env:
-        OPENWRT_ARMVIRT: lean/*/*/*rootfs.tar.gz
-        PACKAGE_SOC: vplus_beikeyun_l1pro_s905d_s905x2_s905x3_s912_s922x_s922x-n2
-        KERNEL_REPO_URL: https://github.com/ophub/kernel/tree/main/pub/stable
-        KERNEL_VERSION_NAME: 5.4.163_5.10.83_5.15.13_5.17.13
-        KERNEL_AUTO_LATEST: true
-        WHOAMI: Tao
-        ENABLE_WIFI_K504: 0
-        ENABLE_WIFI_K510: 0
-        GZIP_IMGS: .gz
+        OPENWRT_ARMVIRT: ${{ env.OPENWRT_ARMVIRT }}
+        PACKAGE_SOC: ${{ env.PACKAGE_SOC }}
+        KERNEL_REPO_URL: ${{ env.KERNEL_REPO_URL_ONE }}
+        KERNEL_VERSION_NAME: ${{ env.KERNEL_VERSION_NAME }}
+        KERNEL_AUTO_LATEST: ${{ env.KERNEL_AUTO_LATEST }}
+        WHOAMI: ${{env.WHOAMI}}
+        OPENWRT_VER: ${{env.REPO_BRANCH}}
+        GZIP_IMGS: ${{ env.PRODUCT_NAME }}
 
     - name: Rename Firmware and Rootfs for upload
       run: |
         sudo apt install rename
         cd ${{ env.PACKAGED_OUTPUTPATH }}
         rename "s/openwrt/Lean/" ./*.gz
-
+        mv sha256sums leansha256sums
+        
     - name: Upload openwrt to release
       uses: ncipollo/release-action@v1
       if: env.PACKAGED_STATUS == 'success' && !cancelled()
@@ -235,7 +246,7 @@ jobs:
         tag: ${{ env.PRODUCT_NAME }}
         token: ${{ secrets.GITHUB_TOKEN }}
         body: |
-          ** 打包时间:🕛 ${{ env.DATE }}      🤵 源码作者:[Lean](https://github.com/coolsnowwolf)      内核:[ophub](https://github.com/ophub/kernel)
+          打包时间:🕛 ${{ env.DATE }}      🤵 源码作者:[Lean](https://github.com/coolsnowwolf)      内核:[ophub](https://github.com/ophub/kernel)
           * 这是 ARMv8 PLUS版本 ，集成一些日常常用插件
           默认 IP：192.168.124.38 默认密码：无/password
           安装到 EMMC：系统 → 晶晨宝盒 → 安装 OpenWrt → 选择型号 → 安装
@@ -261,17 +272,10 @@ jobs:
   buildtwo:
     runs-on: ubuntu-20.04
     env:
-      REPO_URL: https://github.com/coolsnowwolf/lede
-      REPO_BRANCH: master
       FEEDS_CONF: diy/arm/feeds.conf.default
       CONFIG_FILE: diy/arm/.config
       DIY_P1_SH: diy/arm/diy-part1.sh
       DIY_P2_SH: diy/arm/diy-part2.sh
-      UPLOAD_BIN_DIR: false
-      UPLOAD_FIRMWARE: false
-      UPLOAD_RELEASE: true
-      UPLOAD_189: false
-      TZ: Asia/Shanghai
       FILE_NAME: ROOTFS_Plus_Myself
       PRODUCT_NAME: ARMv8_Plus_Myself
     steps:
@@ -431,7 +435,7 @@ jobs:
         tag: ${{ env.FILE_NAME }}
         token: ${{ secrets.GITHUB_TOKEN }}
         body: |
-          ** 打包时间:🕛 ${{ env.DATE }}      🤵 源码作者:[Lean](https://github.com/coolsnowwolf)
+          打包时间:🕛 ${{ env.DATE }}      🤵 源码作者:[Lean](https://github.com/coolsnowwolf)
           * 自用底包          
           * ❌❌❌禁止❌❌❌使用❌❌❌
           * ❗包含大量个性化配置，使用自编译内核，可能极不稳定，无法直接使用❗
@@ -449,21 +453,21 @@ jobs:
       uses: Tao173/Auto-Update-Router@master
       if: steps.organize.outputs.status == 'success' && !cancelled()
       env:
-        OPENWRT_ARMVIRT: lean/*/*/*rootfs.tar.gz
-        PACKAGE_SOC: vplus_beikeyun_l1pro_s905d_s905x2_s905x3_s912_s922x_s922x-n2
-        KERNEL_REPO_URL: https://github.com/Tao173/Auto-Update-Router/tree/master/backup/mykernel
-        KERNEL_VERSION_NAME: 5.10.83_5.15.13
-        KERNEL_AUTO_LATEST: true
-        WHOAMI: Tao
-        ENABLE_WIFI_K504: 0
-        ENABLE_WIFI_K510: 0
-        GZIP_IMGS: .gz
+        OPENWRT_ARMVIRT: ${{ env.OPENWRT_ARMVIRT }}
+        PACKAGE_SOC: ${{ env.PACKAGE_SOC }}
+        KERNEL_REPO_URL: ${{ env.KERNEL_REPO_URL_TWO }}
+        KERNEL_VERSION_NAME: ${{ env.KERNEL_VERSION_NAME }}
+        KERNEL_AUTO_LATEST: ${{ env.KERNEL_AUTO_LATEST }}
+        WHOAMI: ${{env.WHOAMI}}
+        OPENWRT_VER: ${{env.REPO_BRANCH}}
+        GZIP_IMGS: ${{ env.PRODUCT_NAME }}
 
     - name: Rename Firmware and Rootfs for upload
       run: |
         sudo apt install rename
         cd ${{ env.PACKAGED_OUTPUTPATH }}
         rename "s/openwrt/Lean/" ./*.gz
+        mv sha256sums leansha256sums
 
     - name: Upload openwrt to release
       uses: ncipollo/release-action@v1
@@ -476,7 +480,7 @@ jobs:
         tag: ${{ env.PRODUCT_NAME }}
         token: ${{ secrets.GITHUB_TOKEN }}
         body: |
-          ** 打包时间:🕛 ${{ env.DATE }}      🤵 源码作者:[Lean](https://github.com/coolsnowwolf)      内核:[Myself](https://github.com/Tao173/compile-kernel)
+          打包时间:🕛 ${{ env.DATE }}      🤵 源码作者:[Lean](https://github.com/coolsnowwolf)      内核:[Myself](https://github.com/Tao173/compile-kernel)
           * ❌❌❌禁止❌❌❌使用❌❌❌
           * ❗包含大量个性化配置，使用自编译内核，可能极不稳定，无法直接使用❗
                    
