--- a/.github/workflows/Just For Test.yml
+++ b/.github/workflows/Just For Test.yml
@@ -4,8 +4,7 @@
 # https://github.com/yfdoor/OpenWrt
 # Description: GitHub Actions for OpenWrt Build
 
-name: OpenWrt-Build
-
+name: Just For Test
 # 触发条件
 on:
   #  push:
