--- a/.github/workflows/NanoPis-OpenWrt.yml
+++ b/.github/workflows/NanoPis-OpenWrt.yml
@@ -180,6 +180,7 @@ jobs:
 
 # /////////////////////////////////////////////////////////////////////////////////////////////////////////
   Plus-NanoPi-R2S-Lean:
+    if: ${{ always() }}  
     needs: [Plus-NanoPi-R2C-Lean]  
     runs-on: ubuntu-20.04
     env:
@@ -334,6 +335,7 @@ jobs:
 
 # /////////////////////////////////////////////////////////////////////////////////////////////////////////
   Plus-NanoPi-R4S-Lean: 
+    if: ${{ always() }}  
     needs: [Plus-NanoPi-R2S-Lean]  
     runs-on: ubuntu-20.04
     env:
