--- a/.github/workflows/Multiple Source Check.yml
+++ b/.github/workflows/Multiple Source Check.yml
@@ -205,7 +205,7 @@ jobs:
         event-type: Mykernel Update
 
   New-Update-Files:
-    needs: [Checka, Checkb,Checkc, Checkd, Checke]   
+    needs: [Checka, Checkb,Checkc, Checkd]   
     if: ${{ needs.Checkd.outputs.output != 'hello' }}
     runs-on: ubuntu-20.04
     steps:
@@ -216,9 +216,12 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: |
         sudo timedatectl set-timezone "$TZ"
-        pwd
+        svn co --username ${{ secrets.MYNAME }} --password ${{ secrets.ACTIONS_TRIGGER_PAT }} https://github.com/${{ secrets.MYPRIVATEREPOSITORIES }}/trunk/files ./files
+        cp ./files/pull.sh ./
         chmod +x pull.sh
         ./pull.sh
+        rm -rf pull.sh && rm -rf files
+
     - name: Download Myself kernel
       uses: robinraju/release-downloader@v1.3
       with:
