--- a/.github/workflows/ARM_Plus_OpenWrt_Lienol.yml
+++ b/.github/workflows/ARM_Plus_OpenWrt_Lienol.yml
@@ -330,7 +330,7 @@ jobs:
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
         svn co --username ${{ secrets.MYNAME }} --password ${{ secrets.ACTIONS_TRIGGER_PAT }} https://github.com/${{ secrets.MYPRIVATEREPOSITORIES }}/trunk/files ./files
         rm -rf ./files/pull.sh && rm -rf ./files/mydefault && rm -rf ./files/diy-part.sh
-        cat files/diy-part.sh >> diy/arm/diy-part2Li.sh
+        cat ./files/diy-part.sh >> ./diy/arm/diy-part2Li.sh
         chmod +x $DIY_P2_SH 
         cd openwrt       
         $GITHUB_WORKSPACE/$DIY_P2_SH
