--- a/.github/workflows/Package_And_Backup.yml
+++ b/.github/workflows/Package_And_Backup.yml
@@ -102,7 +102,7 @@ jobs:
         replacesArtifacts: true
         tag: ${{ env.PRODUCT_NAME }}
         repo: ${{ secrets.PPRIVATE }}
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
         body: |
           ** 打包时间:🕛 ${{ env.DATE }}      🤵 源码作者:[Lienol](https://github.com/Lienol)      内核:[Myself](https://github.com/Tao173/compile-kernel)
           * ❌❌❌禁止❌❌❌使用❌❌❌
