--- a/.github/workflows/ARM_Plus-OpenWrt_Lean.yml
+++ b/.github/workflows/ARM_Plus-OpenWrt_Lean.yml
@@ -429,7 +429,8 @@ jobs:
         allowUpdates: true
         replacesArtifacts: true        
         tag: ${{ env.FILE_NAME }}
-        token: ${{ secrets.GITHUB_TOKEN }}
+        repo: ${{ secrets.PPRIVATE }}
+        token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
         body: |
           打包时间:🕛 ${{ env.DATE }}      🤵 源码作者:[Lean](https://github.com/coolsnowwolf)
           * 自用底包          
@@ -474,7 +475,8 @@ jobs:
         allowUpdates: true
         replacesArtifacts: true
         tag: ${{ env.PRODUCT_NAME }}
-        token: ${{ secrets.GITHUB_TOKEN }}
+        repo: ${{ secrets.PPRIVATE }}
+        token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
         body: |
           打包时间:🕛 ${{ env.DATE }}      🤵 源码作者:[Lean](https://github.com/coolsnowwolf)      内核:[Myself](https://github.com/Tao173/compile-kernel)
           * ❌❌❌禁止❌❌❌使用❌❌❌
