--- a/.github/workflows/ARM_Plus_OpenWrt_Lienol.yml
+++ b/.github/workflows/ARM_Plus_OpenWrt_Lienol.yml
@@ -425,7 +425,8 @@ jobs:
         allowUpdates: true
         replacesArtifacts: true        
         tag: ${{ env.FILE_NAME }}
-        token: ${{ secrets.GITHUB_TOKEN }}
+        repo: ${{ secrets.PPRIVATE }}
+        token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
         body: |
           打包时间:🕛 ${{ env.DATE }}      🤵 源码作者:[Lienol](https://github.com/Lienol)
           * 自用底包
@@ -471,7 +472,8 @@ jobs:
         allowUpdates: true
         replacesArtifacts: true
         tag: ${{ env.PRODUCT_NAME }}
-        token: ${{ secrets.GITHUB_TOKEN }}
+        repo: ${{ secrets.PPRIVATE }}
+        token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
         body: |
           打包时间:🕛 ${{ env.DATE }}      🤵 源码作者:[Lienol](https://github.com/Lienol)      内核:[Myself](https://github.com/Tao173/compile-kernel)
           * ❌❌❌禁止❌❌❌使用❌❌❌
