个人版：修复小错误，添加更多diy内容，优化web界面

--- a/.github/workflows/ARM_Plus_OpenWrt_Lienol.yml
+++ b/.github/workflows/ARM_Plus_OpenWrt_Lienol.yml
@@ -231,7 +231,7 @@ jobs:
         cd ${{ env.PACKAGED_OUTPUTPATH }}
         rename "s/openwrt/Lienol/" ./*${{ env.PRODUCT_NAME }}
         rename "s/openwrt/Lienol/" ./*.gz
-        mv sha256sums lienolsha256sums
+        mv sha256sums Lienolsha256sums
     - name: Upload openwrt to release
       uses: ncipollo/release-action@v1
       if: env.PACKAGED_STATUS == 'success' && !cancelled()
@@ -459,7 +459,7 @@ jobs:
       run: |
         sudo apt install rename
         cd ${{ env.PACKAGED_OUTPUTPATH }}
-        rename "s/openwrt/Lienol/" ./*${{ env.GZIP_IMGS }}
+        rename "s/openwrt/Lienol/" ./*.xz
         rename "s/openwrt/Lienol/" ./*.gz
         mv sha256sums Lienolsha256sums
         
